# openeo-mcp

./: .env.example  README.md  pyproject.toml  pytest.ini  server.py
.github/workflows/: ci.yml
tests/: test_server.py
